[package]
name = "cyberpunk"
description = "Audio Processing Server"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonaylor89/cyberpunk"
repository = "https://github.com/jonaylor89/cyberpunk"
keywords = ["audio", "sound", "server"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cyberpunk"
path = "src/main.rs"

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
config = "0.13.2"
once_cell = "1.16.0"
serde = {version = "1.0.147", features = ["derive"]}
serde-aux = "4.0.0"
serde_json = "1.0.87"
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.35", features = ["log"]}
tracing-actix-web = "0.6.2"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.14", features = [
  "registry",
  "env-filter",
]}

[dev-dependencies]
reqwest = "0.11.12"
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
wiremock = "0.5.13"

