[package]
name = "cyberpunk"
description = "Audio Processing Server"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonaylor89/cyberpunk"
repository = "https://github.com/jonaylor89/cyberpunk"
keywords = ["audio", "sound", "server"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cyberpunk"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = "0.14.0"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
axum = "0.7.7"
color-eyre = "0.6.3"
serde = "1.0.210"
serde_json = "1.0.128"
regex = "1.11.0"
lazy_static = "1.5.0"
url = "2.5.2"
nom = "7.1.3"
pretty_assertions = "1.4.1"
sha1 = "0.10.6"
hex = "0.4.3"
argon2 = { version = "0.4.1", features = ["std"] }
secrecy = { version = "0.10.2", features = ["serde"] }
rand = "0.8.5"
thiserror = "1.0.64"
google-cloud-storage = "0.22.1"
infer = "0.16.0"
tower-http = { version = "0.6.1", features = ["trace", "limit"] }
dotenvy = "0.15.7"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
metrics = { version = "0.23.0", default-features = false }
tokio-util = "0.7.12"
reqwest = "0.12.8"
image = "0.25.4"
aws-sdk-s3 = "1.58.0"
tower = { version = "0.5.1", features = ["limit", "buffer"] }
redis = { version = "0.27.5", features = ["tokio-comp", "tokio-rustls-comp"] }
tower_governor = { version = "0.4.3", features = ["tracing"] }
serde-aux = "4.5.0"
urlencoding = "2.1.3"

[dev-dependencies]
reqwest = "0.11.12"
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
wiremock = "0.5.13"
